--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.itzy.android.base">
+    package="com.itzy.android.shopping">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,15 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.itzy.android.base.view.MainActivity">
+        <activity android:name="com.itzy.android.shopping.search.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.itzy.android.base.view.PopupActivity" android:theme="@style/popupTheme" android:screenOrientation="portrait"/>
-        <activity android:name="com.itzy.android.base.view.ShoppingCartActivity"></activity>
+        <activity android:name="com.itzy.android.shopping.compare.PopupActivity" android:theme="@style/popupTheme" android:screenOrientation="portrait"/>
+        <activity android:name="com.itzy.android.shopping.cart.ShoppingCartActivity"></activity>
     </application>
 
 </manifest>
