--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.itzy.android.shopping.search.MainActivity">
+        <activity android:name="com.itzy.android.shopping.search.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.itzy.android.shopping.compare.PopupActivity" android:theme="@style/popupTheme" android:screenOrientation="portrait"/>
-        <activity android:name="com.itzy.android.shopping.cart.ShoppingCartActivity"></activity>
+        <activity android:name="com.itzy.android.shopping.compare.CompareActivity" android:theme="@style/popupTheme" android:screenOrientation="portrait"/>
+        <activity android:name="com.itzy.android.shopping.cart.CartActivity"></activity>
     </application>
 
 </manifest>
